# NutriTrack

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
app/: README.md  main.py
app/application/use_cases/meals/: create_meal.py  get_all_meals.py
app/application/use_cases/users/: create_user.py  get_all_users.py  get_user.py
app/domain/entities/: meal.py  user.py
app/domain/repositories/: meal_repository.py  repository.py  user_repository.py
app/infrastructure/database/: db_connection.py
app/infrastructure/database/models/: association_table.py  meal_model.py  user_model.py
app/infrastructure/repositories/: meal_repository_impl.py  user_repository_impl.py
app/interface/api/endpoints/: meal_endpoints.py  user_endpoints.py
app/schemas/: meal_schemas.py  user_schemas.py
nutritrack/app/: config.py  main.py
nutritrack/app/models/: daily_goal.py  food.py  meal.py  user.py
nutritrack/app/routers/: food_routes.py  goal_routes.py  meal_routes.py  user_routes.py
