[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NutriTrack"
version = "0.1.0"
description = "NutriTrack a pour mission d’améliorer la santé globale en démocratisant l’accès à des outils de suivi nutritionnel de haute qualité."
dependencies = [
    "uvicorn>=0.32.1",
    "fastapi>=0.115.5",
    "sqlalchemy>=2.0.36",
    "pydantic[email]"
]

[tool.setuptools.packages.find]
exclude = ["env_nutri"]

[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = true

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
order_by_type = false
lines_after_imports = 2
force_single_line = false
line_length = 88
